Various changes to chapters 1-3 plus install docs from Kim's notes. Will work through the rest of the chapters tonight/tomorrow morning.
git-svn-id: https://svn.mccode.org/svn/McStasTeX@119 feec88ba-9254-4c29-afb0-2c2f27bf560d

--- a/trunk/abstractpage.tex
+++ b/trunk/abstractpage.tex
@@ -19,14 +19,11 @@ Materials Research Department, Ris{\o} National Laboratory, Roskilde, Denmark
 Emmanuel Farhi \verb+<farhi@ill.fr>+ \\
 Institut Laue-Langevin, Grenoble, France 
 
-Mark Hagen \verb+<mhz@ansto.gov.au>+ \\
-Australian Nuclear Science and technology Organization, Sydney, Australia 
+Klaus Lieutenant \verb+<lieutena@ill.fr>+ \\
+Institut Laue-Langevin, Grenoble, France 
 \end{quote}
 as well as authors who left the project:
 \begin{quote}
-Per-Olof {\AA}strand \verb+<per-olof.aastrand@risoe.dk>+\\
-Materials Research Department, Ris{\o} National Laboratory, Roskilde, Denmark 
-
 Kristian Nielsen \verb+<kn@sifira.dk>+ \\
 Materials Research Department, Ris{\o} National Laboratory, Roskilde, Denmark 
 Present address: Sifira A/S, Copenhagen, Denmark, 
