--- a/trunk/manual.tex
+++ b/trunk/manual.tex
@@ -93,7 +93,7 @@
 %\include{future} % now in changes
 
 \appendix
-\include{tutorial}
+%\include{tutorial}
 \include{kernelcalls}
 %\include{compcode}
 %\include{instcode}
