--- a/trunk/preface.tex
+++ b/trunk/preface.tex
@@ -3,7 +3,7 @@
 \addcontentsline{toc}{chapter}{\protect\numberline{}{Preface and acknowledgements}}
 \chapter*{Preface and acknowledgements}
 This document contains information on the Monte Carlo neutron
-ray-tracing program \MCS\ version \version, an update to the initial
+ray-tracing program \MCS\ version \version, building on the initial
 release in October 1998 of version 1.0 as presented in Ref.~\cite{nn_10_20}. The reader of this
 document is supposed to have some knowledge of neutron scattering,
 whereas only little knowledge about simulation techniques is
@@ -42,7 +42,7 @@ A special bug/request reporting service is available \cite{mczilla_webpage}.
 
 If you {\bf appreciate} this software, please subscribe to the \verb+neutron-mc@risoe.dk+ email list, send us a smiley message, and contribute to the package. We also encourage you to refer to this software when publishing results, with the following citations:
 \begin{itemize}
-\item{K. Lefmann and K. Nielsen, Neutron News 10, 20, (1999).}
+\item{K. Lefmann and K. Nielsen, Neutron News 10/3, 20, (1999).}
 \item{P. Willendrup, E. Farhi and K. Lefmann, Physica B, 350 (2004) 735.}
 \end{itemize}
 
@@ -54,13 +54,12 @@ to \MCS\ \version:
 \item{Dickon Champion and Stuart Ansell, ISIS:
     \verb+ISIS_moderator+. Dickon also contributed his model of the
     ISIS HET instrument plus a test instrument for the moderator
-    component. Dickon also assisted in various debugging.}
+    component and assisted in various debugging.}
 \item{Uwe Filges, PSI: \verb+Guide_tapering+ and a model of the PSI
     FOCUS instrument}
 \item{Ross Stewart, ILL: New \verb+Guide_curved+}
 \item{Chris Ling, ILL: ILL D9 instrument}
-\item{Lise Arleth, RIS\O: Helped the developer team regarding the new
-  \verb+Sans_spheres+ component}
+\item{Lise Arleth, KVL Denmark: Co-author of the \verb+Sans_spheres+ component}
 \item{Geza Zsigmond helped a lot in porting his Fermi Chopper component from Vitess \cite{Vitess, vitess_webpage} to \MCS .}
 \end{itemize}
 Thank you guys! This is what \MCS\ is all about!
