--- a/trunk/comp_abstract.tex
+++ b/trunk/comp_abstract.tex
@@ -81,7 +81,7 @@ Arm                &  Arm/optical bench. \\
  Chopper           &   Disk chopper. \\
  Collimator\_linear &  A simple analytical Soller collimator. \\
  Collimator\_radial &  A radial Soller collimator.\\
- FermiChopper      &  Straight Fermi Chopper with rotating-frame calculations. \\
+ FermiChopper      &  Fermi Chopper with rotating-frame calculations. \\
  Filter\_gen        &   This components may either set the flux
                       or change it (filter-like), using
                       an external data file. \\
