--- a/trunk/optics.tex
+++ b/trunk/optics.tex
@@ -48,6 +48,6 @@ and velocity selector used for partially monochromatize continuous beams.
 \newpage
 \input{v_selector}
 
-// there follows a chapter
+% there follows a chapter
 \newpage
 \input{monochromator}
