--- a/trunk/guide.tex
+++ b/trunk/guide.tex
@@ -60,7 +60,8 @@ material. At higher values of $Q$, the reflectivity starts falling
 linearly with a slope $\alpha$ until a "soft cut-off" at $Q = m Q_{\rm c}$.
 The width of this cut-off is denoted $W$. See the example reflection curve in
 figure~\ref{f:reflectivity}.
-It is important to notice that when $m < 1$, the reflectivity remains constant at $R=R_0$ up to $q=Qc$, and \emph{not} $m.Q_c$. This means that $m < 1$ parameters behave like $m=1$ materials.
+
+It is {\bf important} to notice that when $m < 1$, the reflectivity remains constant at $R=R_0$ up to $q=Qc$, and \emph{not} $m.Q_c$. This means that $m < 1$ parameters behave like $m=1$ materials.
 
 \subsection{Algorithm}
 The function of the component can be described as
@@ -109,7 +110,7 @@ $R_0, m, Q_c, W$, and $\alpha$, as for {\bf Mirror}.
 
 {\bf Guide} may produce wrong results with gravitation support.
 Use {\bf Guide\_gravity} (section \ref{s:guide_gravity}) in this case.
-For a more general guide simulation, see {\bf Channeled\_guide}
+For a more general guide simulation, see {\bf Guide\_channeled}
 in section~\ref{s:channeled_guide}.
 
 \begin{figure}
@@ -205,7 +206,7 @@ components of {\bf n} and {\bf O} are zero.
 \label{s:channeled_guide}
 \index{Optics!Guide with channels (straight, non focusing)}
 
-\component{Guide\_channeled}{System}{$w_1, h_1$, $w_2, h_2$, $l$, $k$, $m_x, m_y$}{$d, R_0, Q_{cx}, Q_{cy}, W, \alpha_x, \alpha_y$}{partly validated, no gravitation support}
+\component{Guide\_channeled}{System}{$w_1, h_1$, $w_2, h_2$, $l$, $k$, $m_x, m_y$}{$d, R_0, Q_{cx}, Q_{cy}, W, \alpha_x, \alpha_y$}{validated, no gravitation support}
 
 The component {\bf Guide\_channeled} is a more complex variation of {\bf Guide}
 described in the previous section. It allows the specification
@@ -250,7 +251,7 @@ values of $w_1$ and $w_2$) is buggy
 \label{s:guide_gravity}
 \index{Optics!Guide with channels and gravitation handling (straight)}
 
-\component{Guide\_gravity}{System}{$w_1, h_1$, $w_2, h_2$, $l$, $k$, $m$}{$d, R_0, Q_c, W, \alpha$, wavy, chamfers, $k_h$, $n$, $G$}{fully validated, {\bf with} gravitation support}
+\component{Guide\_gravity}{System}{$w_1, h_1$, $w_2, h_2$, $l$, $k$, $m$}{$d, R_0, Q_c, W, \alpha$, wavy, chamfers, $k_h$, $n$, $G$}{validated, {\bf with} gravitation support}
 
 This component is a variation of {\bf Guide\_channeled}
 (section \ref{s:channeled_guide}) with the ability to handle
@@ -314,4 +315,6 @@ ROTATED (0, (L/n+d)/R*180/PI, 0) RELATIVE PREVIOUS
 COMPONENT CG_Out = Arm() AT (0,0,L/n) RELATIVE PREVIOUS
 \end{verbatim}
 The \verb+Guide+ component should be duplicated $n$ times by copy-paste, but changing the instance name, e.g. CG\_1, CG\_2, ..., CG\_n.
+
+An implementation of a continuous curved guide has been contributed as component Guide\_curved.
 
