--- a/trunk/source_maxwell.tex
+++ b/trunk/source_maxwell.tex
@@ -24,7 +24,7 @@ where
 $M(\lambda,T_1) = 2 \alpha^2 \exp(-\alpha/\lambda^2) / \lambda^5 $
 is the normalized Maxwell distribution ($\alpha=949.0$~K \AA$^2/T_1$).
 The initial weight of the created neutron ray, $p_0$, is
-calculated according to \ref{proprule}, with $\Psi(\lambda)$ replaced
+calculated according to Eq. (\ref{proprule}), with $\Psi(\lambda)$ replaced
 by $\sum_{j=1}^3 I_j M(\lambda,T_j)$.
 
 %
