--- a/trunk/sources.tex
+++ b/trunk/sources.tex
@@ -69,6 +69,7 @@ are independent of the number of neutron histories simulated
 If $N_{\rm sim}$ denotes the number of
 neutron histories to simulate, the initial neutron weight $p_0$ must be set to
 \begin{equation}
+\label{proprule}
 p_0 = \frac{N_{\rm total}}{N_{\rm sim}} =
     \frac{\Phi(\lambda)}{N_{\rm sim}} A \Omega \Delta\lambda ,
 \end{equation}
