Large revision in terms of language, typos and clarity plus a bit of cosmetics. I have moved the MPI/Grid section to the back as this probably only interests a  limited number of people.
Moving on to chapters 6->


git-svn-id: https://svn.mccode.org/svn/McStasTeX@122 feec88ba-9254-4c29-afb0-2c2f27bf560d

--- a/trunk/figures/mcstas_software.tex
+++ b/trunk/figures/mcstas_software.tex
@@ -2,11 +2,10 @@
 %\usepackage{pstricks,pst-node}
 
 %\begin{document}
-
+\vspace{-1cm}
 \begin{pspicture}*(0.0,0.0)(20,8)%\showgrid
 
 \newcommand{\textsize}{\small}
-
 \rput(6.0,1.0){\ovalnode{A}{
    \begin{tabular}{c} {\textsize Executable (binary)} \end{tabular}
 }}
@@ -26,33 +25,33 @@
 }}
 
 %\rput(12.0,5.0){\ovalnode{E}{
-%    \begin{tabular}{c} {\textsize Analysis} \\ {\textsize (Perl/PDL)} \end{tabular}}}
+%    \begin{tabular}{c} {\textsize Visualisation} \\ {\textsize (Perl/PDL)} \end{tabular}}}
 
 \rput(8.0,7.0){\ovalnode{F}{
     \begin{tabular}{c} {\textsize Graphical User Interface} \\ {\textsize (Perl)} \end{tabular}
 }}
 
 \rput(13.5,6){\ovalnode{G}{
-    \begin{tabular}{c} {\textsize Analysis} \\ {\textsize (PGPLOT +} \\
+    \begin{tabular}{c} {\textsize Visualisation} \\ {\textsize (PGPLOT +} \\
         {\textsize pgperl + PDL)} \end{tabular}}}
 
 \rput(13.5,4){\ovalnode{I}{
-    \begin{tabular}{c} {\textsize Analysis} \\ {\textsize (Matlab)}\end{tabular}}}
+    \begin{tabular}{c} {\textsize Visualisation} \\ {\textsize (Matlab)}\end{tabular}}}
 \rput(13.5,2.35){\ovalnode{J}{
-    \begin{tabular}{c} {\textsize Analysis} \\ {\textsize (Scilab)}\end{tabular}}}
+    \begin{tabular}{c} {\textsize Visualisation} \\ {\textsize (Scilab)}\end{tabular}}}
 \rput(11.35,1.2){\ovalnode{K}{
-    \begin{tabular}{c} {\textsize Analysis} \\ {\textsize (IDL)}\end{tabular}}}
+    \begin{tabular}{c} {\textsize Visualisation} \\ {\textsize (IDL)}\end{tabular}}}
 \rput(8.5,2.2){\ovalnode{L}{
-    \begin{tabular}{c} {\textsize Analysis} \\ {\textsize (Browser)}\end{tabular}}}
+    \begin{tabular}{c} {\textsize Visualisation} \\ {\textsize (Browser)}\end{tabular}}}
 
 %\rput(12.0,2.5){\ovalnode{I}{
-%    \begin{tabular}{c} {\textsize Analysis} \\ {\textsize (Matlab,
+%    \begin{tabular}{c} {\textsize Visualisation} \\ {\textsize (Matlab,
 %        Scilab, IDL,} \\ {\textsize PGPLOT/pgperl/PDL,} \\ {\textsize
 %        \texttt{html}, XML, ...)} \end{tabular}
 %}}
 
 %\rput(12.0,2.5){\ovalnode{J}{
-%    \begin{tabular}{c} {\textsize Analysis} \\ {\textsize (Matlab,
+%    \begin{tabular}{c} {\textsize Visualisation} \\ {\textsize (Matlab,
 %        Scilab, IDL,} \\ {\textsize PGPLOT/pgperl/PDL,} \\ {\textsize
 %        \texttt{html}, XML, ...)} \end{tabular}
 %}}
