Added tex doc for Vitess FC
git-svn-id: https://svn.mccode.org/svn/McStasTeX@125 feec88ba-9254-4c29-afb0-2c2f27bf560d

--- a/trunk/optics.tex
+++ b/trunk/optics.tex
@@ -45,6 +45,8 @@ and velocity selector used for partially monochromatize continuous beams.
 \newpage
 \input{FermiChopper}
 
+\input{Vitess_ChopperFermi.tex}
+
 \newpage
 \input{v_selector}
 
